<resources>
    <string name="app_name">WineCellarApp</string>
    <string name="menu_item">MenuItem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="air">Air quality</string>
    <string name="notification">Notifications</string>
    <string name="home">Home</string>
    <string name="home_text">Choose the sensors which values you want to see</string>
    <string name="temp_title">Temperature</string>
    <string name="temp_value_title">Last measured temperature</string>
    <string name="temp_date_title">Measured on</string>
    <string name="temp_time_title">at</string>
    <string name="timeFormat">hh:mm:ss</string>
    <string name="dateFormat">dd-MM-yyyy</string>
    <string name="period" formatted="true">Start date: %s End date: %s</string>
    <string name="start_date" formatted="true">Start date: \n %s</string>
    <string name="end_date" formatted="true">End date: %s End date: %s</string>
    <string name="graphs_text_view">Graphs from time period</string>
    <string name="change_period">Change</string>

    <!--LOGIN-->
    <string name="action_log_out">Log Out</string>
    <string name="login_button">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_create_account">Create account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="server_client_id">"695737841871-kq37mbsim31oge0fi1k9brbrcrmgqo3n.apps.googleusercontent.com"</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_profile">Profile</string>
    <string name="humidity_date_title">Humidity Date</string>
    <string name="last_measured_humidity">Last measured humidity</string>
    <string name="air_value_title">Last measured co2 levels</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Notifications</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Lowest level accetable</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_name_title">Smart Cellar</string>


</resources>
