<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        style="@style/fragment_title"
        android:id="@+id/currentAir"
        android:text="@string/air_value_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/fragment_value_text"
        android:id="@+id/air_text"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentAir" />

    <LinearLayout
        android:id="@+id/linearLayoutAir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/air_text">

        <TextView
            style="@style/fragment_measured_text"
            android:text="@string/temp_date_title"
             />

        <TextView
            style="@style/fragment_measured_text"
            android:id="@+id/air_date"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
             />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBarAirValue"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutAir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentAir" />

    <TextView
        style="@style/fragment_subtitle"
        android:id="@+id/graphs_text_view_Air"
        android:text="@string/graphs_text_view"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAir" />

    <TextView
        style="@style/fragment_date_text"
        android:id="@+id/start_date_Air"
        app:layout_constraintBottom_toTopOf="@+id/list_graphs_air"
        app:layout_constraintEnd_toStartOf="@+id/changePeriodAir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphs_text_view_Air" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changePeriodAir"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_period"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintEnd_toStartOf="@id/end_date_air"
        app:layout_constraintStart_toEndOf="@+id/start_date_Air"
        app:layout_constraintTop_toBottomOf="@+id/graphs_text_view_Air"
        app:layout_constraintBottom_toTopOf="@+id/list_graphs_air"
        app:rippleColor="@color/colorPrimary"
        app:strokeColor="@android:color/holo_green_light"
        app:strokeWidth="2dp" />

    <TextView
        style="@style/fragment_date_text"
        android:id="@+id/end_date_air"
        app:layout_constraintBottom_toTopOf="@+id/list_graphs_air"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/changePeriodAir"
        app:layout_constraintTop_toBottomOf="@+id/graphs_text_view_Air" />


    <ListView
        android:id="@+id/list_graphs_air"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePeriodAir">

    </ListView>

    <ProgressBar
        android:id="@+id/progressBarAirGraphs"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/list_graphs_air"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/list_graphs_air" />


</androidx.constraintlayout.widget.ConstraintLayout>